Add the file history maintain process